Ingress/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: food
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
